--- a/public/css/auth/register_login.css
+++ b/public/css/auth/register_login.css
@@ -1,12 +1,4 @@
-  main{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .container{
+.container{
     margin-top: 2%;
     background-color: #fff;
     border-radius: 7px;
@@ -17,15 +9,8 @@
     margin-right: auto;
   }
 
-  .form{
-    padding-top: 30px;
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .form-header{
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,15 +120,13 @@
   }
 
   .button-group{
-    margin-bottom: 40px;
-  }
-  
-  .button{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .button input{ 
-    width: 100%;
+  .button-group input{ 
+    width: 50%;
     height: 3rem;
     border: none;
     background-color: #F57419;
@@ -154,13 +137,14 @@
     color: #fff;
     margin-bottom: 30px;
   }
-  
-  .button a{
-    width: 100%;
+
+  .button-group a{
+    width: 50%;
+    text-align: center;
     text-decoration: none;
     height: 20px;
     background-color: #F57419;
-    padding: 0.90rem 16.2rem 0.90rem 16.2rem;
+    padding: 1.5rem;
     border-radius: 5px;
     cursor: pointer;
     font-size: 0.93rem;
