--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,17 @@
     font-family: 'Inter', sans-serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column; 
+  min-height: 100vh; 
+  margin: 0;
+}
+
+main{
+    flex-grow: 1;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -84,31 +95,21 @@ nav li a:hover {
 }
 
 footer {
-    width: 100%;
-    color: var(--cor-bg);
-    bottom: 0;
+  width: 100%;
+  color: var(--cor-bg);
 }
 
-#footer_copyright {
-    display: flex;
-    justify-content: center;
-    background-color: var(--cor-secundaria);
-    font-size: 0.9rem;
-    padding: 1.5rem;
-    font-weight: 100;
-}
-
-.back-button{
+.back-button {
     position: absolute;
     left: 3rem;
     top: 3rem;
 }
 
-.back-button a{
+.back-button a {
     text-decoration: none;
     color: #000000;
 }
 
-.back-button i{
+.back-button i {
     font-size: 2rem;
 }
