--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,8 +12,14 @@ body {
   margin: 0;
 }
 
-main{
+main {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
     flex-grow: 1;
+    width: 100%;
+    height: 100%;
 }
 
 nav {
@@ -99,6 +105,14 @@ footer {
   color: var(--cor-bg);
 }
 
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
 .back-button {
     position: absolute;
     left: 3rem;
@@ -112,4 +126,10 @@ footer {
 
 .back-button i {
     font-size: 2rem;
+}
+
+#robbu-whatsapp-button {
+    top: 70%;
+    transform: translateY(-50%);
+    right: 20px;
 }
