feat: Implement password reset functionality

--- a/public/css/auth/register_login.css
+++ b/public/css/auth/register_login.css
@@ -1,5 +1,297 @@
-.container{
-    margin-top: 2%;
+.container {
+  margin-top: 2%;
+  background-color: #fff;
+  border-radius: 7px;
+  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+  width: 620px;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-header {
+  margin-bottom: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.form-header img {
+  width: 120px;
+}
+
+.title {
+  padding-bottom: 1rem;
+}
+
+.title h1 {
+  font-family: monospace;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 3.5rem;
+}
+
+.form-subheader {
+  display: flex;
+  flex-direction: column;
+  margin: 0 40px 0 40px;
+}
+
+.subtitle h2 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.subtitle p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.input-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 40px 0 40px;
+  padding: 1rem 0 0 0;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.1rem;
+}
+
+.input-box input {
+  height: 3rem;
+  margin: 0.6rem 0;
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px #0000001c;
+}
+
+.input-box input:hover {
+  background-color: #eeeeee75;
+}
+
+.input-box input:focus-visible {
+  outline: 1px solid #F57419;
+}
+
+.input-box select {
+  margin: 0.6rem 0;
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px #0000001c;
+}
+
+.input-box select:hover {
+  background-color: #eeeeee75;
+}
+
+.input-box select:focus-visible {
+  outline: 1px solid #F57419;
+}
+
+.input-box label {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: #000000c0;
+}
+
+.input-box input::placeholder {
+  color: #000000be;
+}
+
+.esqueci-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.esqueci {
+  display: flex;
+  justify-content: end;
+  margin: 0 0 2rem 0;
+}
+
+.esqueci a {
+  font-size: 15px;
+  color: #555;
+}
+
+.button-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-group input {
+  width: 50%;
+  height: 3rem;
+  border: none;
+  background-color: #F57419;
+  padding: 0.62rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.93rem;
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.button-group a {
+  width: 50%;
+  text-align: center;
+  text-decoration: none;
+  height: 20px;
+  background-color: #F57419;
+  padding: 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.93rem;
+  color: #fff;
+}
+
+.button input:hover {
+  background-color: #ff6a00;
+}
+
+.button a:hover {
+  background-color: #ff6a00;
+}
+
+.input-box label,
+.gender-title h6 {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: #000000c0;
+}
+
+.input-box input::placeholder {
+  color: #000000be;
+}
+
+.gender-inputs {
+  padding: 0 40px 0 40px;
+}
+
+.gender-group {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.62rem;
+  padding: 0 0.5rem;
+}
+
+.gender-input {
+  display: flex;
+  align-items: center;
+}
+
+.gender-input input {
+  margin-right: 0.35rem;
+}
+
+.gender-input label {
+  font-size: 0.81rem;
+  font-weight: 600;
+  color: #000000c0;
+}
+
+.register-button {
+  text-align: center;
+  padding: 3rem;
+}
+
+.register-button input {
+  width: 200px;
+  border: none;
+  background-color: #F57419;
+  padding: 0.62rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.93rem;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.register-button input:hover {
+  background-color: #ff6a00;
+}
+
+.password-box {
+    position: relative;
+}
+
+.eye-icon {
+    position: absolute;
+    right: 1.5rem; 
+    top: 60%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.5 244.7C518.5 147.9 414.2 80 288 80S57.5 147.9 3.5 244.7c-4.7 8.5-4.7 18.2 0 26.7C57.5 364.1 161.8 432 288 432s230.5-67.9 284.5-160.6c4.7-8.5 4.7-18.2 0-26.7zM288 368c-48.6 0-88-39.4-88-88s39.4-88 88-88 88 39.4 88 88-39.4 88-88 88zm0-128c-22.1 0-40 17.9-40 40s17.9 40 40 40 40-17.9 40-40-17.9-40-40-40z"/></svg>');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px;
+    height: 20px;
+    opacity: 0.6;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.eye-icon:hover {
+    opacity: 1;
+}
+
+.eye-icon.visible {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M320 400c-75.85 0-137.25-58.2-142.5-132.83C155.51 324.24 233.25 448 320 448c90.1 0 171.72-67.24 227.15-161.16a26.68 26.68 0 0 0 0-26.69C491.72 131.24 410.1 64 320 64c-36.12 0-70.39 12.77-96.86 35.53L55.77 82.59c-1.35-2.03-3.26-3.72-5.46-5.06l-42.59-25.55C1.19 50.41-1.02 55.74.87 60.85l79.44 196.48-11.39 28.24-42.59 25.55c-2.2 1.34-4.11 3.03-5.46 5.06l-42.59-25.55C1.19 257.59-1.02 262.92.87 268.03l79.44 196.48 11.39 28.24zM320 320c-35.35 0-64-28.65-64-64s28.65-64 64-64 64 28.65 64 64-28.65 64-64 64zm96.06-128.26c-19.16-17.2-46.04-27.74-76.06-27.74-29.21 0-56.55 9.71-76.92 26.54L19.06 97.46C65.5 59.94 171.19 32 288 32c102.58 0 200.5 48.24 260.84 120.73-10.38 7.35-21.6 14.15-33.36 20.25l-20.94-20.94zm-144.06 144.26c35.35 0 64-28.65 64-64s28.65-64 64-64 64 28.65 64 64-28.65 64-64 64zm168.06-144.26c-19.16-17.2-46.04-27.74-76.06-27.74-29.21 0-56.55 9.71-76.92 26.54L19.06 97.46C65.5 59.94 171.19 32 288 32c102.58 0 200.5 48.24 260.84 120.73-10.38 7.35-21.6 14.15-33.36 20.25l-20.94-20.94z"/> </svg>');
+}
+
+footer {
+  width: 100%;
+  color: var(--cor-bg);
+  position: relative;
+  bottom: 0;
+
+}
+
+#footer_copyright {
+  display: flex;
+  justify-content: center;
+  background-color: var(--cor-secundaria);
+  font-size: 0.9rem;
+  padding: 1.5rem;
+  font-weight: 100;
+}
+
+@media screen and (max-width: 700px) {
+  .formLogin {
+    height: 40%;
+    width: 100%;
+  }
+
+  .button a {
+    width: 100%;
+    text-decoration: none;
+    height: 20px;
+    background-color: #F57419;
+    padding: 0.90rem 4.4rem 0.90rem 4.4rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.93rem;
+    color: #fff;
+  }
+
+  .form {
+    padding-top: 50px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container {
+    margin-top: 20%;
     background-color: #fff;
     border-radius: 7px;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
@@ -9,286 +301,22 @@
     margin-right: auto;
   }
 
-  .form-header{
-    margin-bottom: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+}
+
+@media screen and (max-width: 494px) {
+  .titulo h1 {
+    font-size: 50px;
   }
 
-  .form-header img{
-    width: 120px;
+}
+
+@media screen and (max-width: 412px) {
+  .formLogin {
+    padding-bottom: 130px;
   }
 
-  .title{
-    padding-bottom: 1rem;
-  }
-  
-  .title h1{
-    font-family: monospace;
-    padding: 0;
-    margin: 0;
-    font-weight: 500;
-    font-size: 3.5rem;
-  }
-  
-  .form-subheader{
-    display: flex;
-    flex-direction: column;
-    margin: 0 40px 0 40px;
+  .titulo h1 {
+    font-size: 35px;
   }
 
-  .subtitle h2{
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .subtitle p{
-    font-size: 1rem;
-    margin-bottom: 1rem;
-  }
-
-  .input-group{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0 40px 0 40px;
-    padding: 1rem 0 0 0;
-  }
-
-  .input-box{
-   display: flex;
-   flex-direction: column;
-   margin-bottom: 1.1rem; 
-  }
-
-  .input-box input{
-    height: 3rem;
-    margin: 0.6rem 0;
-    padding: 0.8rem 1.2rem;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 1px 1px 6px #0000001c;
-  }
-
-  .input-box input:hover{
-    background-color: #eeeeee75;
-  }
-
-  .input-box input:focus-visible{
-    outline: 1px solid #F57419;
-  }
-
-  .input-box select{
-    margin: 0.6rem 0;
-    padding: 0.8rem 1.2rem;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 1px 1px 6px #0000001c;
-  }
-
-  .input-box select:hover{
-    background-color: #eeeeee75;
-  }
-
-  .input-box select:focus-visible{
-    outline: 1px solid #F57419;
-  }
-
-  .input-box label{
-    font-size: 0.75rem;
-    font-weight: 600;
-    color: #000000c0;
-  }
-
-  .input-box input::placeholder{
-    color: #000000be;
-  }
-
-  .esqueci-group{
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .esqueci {
-    display: flex;
-    justify-content: end;
-    margin: 0 0 2rem 0;
-  }
-  
-  .esqueci a {
-    font-size: 15px;
-    color: #555;
-  }
-
-  .button-group{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .button-group input{ 
-    width: 50%;
-    height: 3rem;
-    border: none;
-    background-color: #F57419;
-    padding: 0.62rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 0.93rem;
-    color: #fff;
-    margin-bottom: 30px;
-  }
-
-  .button-group a{
-    width: 50%;
-    text-align: center;
-    text-decoration: none;
-    height: 20px;
-    background-color: #F57419;
-    padding: 1.5rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 0.93rem;
-    color: #fff;
-  }
-
-  .button input:hover{
-    background-color: #ff6a00;
-  } 
-
-  .button a:hover{
-    background-color: #ff6a00;
-  }
-
-  .input-box label,
-  .gender-title h6{
-    font-size: 0.75rem;
-    font-weight: 600;
-    color: #000000c0;
-  }
-  
-  .input-box input::placeholder{
-    color: #000000be;
-  }
-
-  .gender-inputs{
-    padding: 0 40px 0 40px;
-  }
-
-  .gender-group{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.62rem;
-    padding: 0 0.5rem;
-  }
-
-  .gender-input{
-    display: flex;
-    align-items: center;
-  }
-
-  .gender-input input{
-    margin-right: 0.35rem;
-  }
-
-  .gender-input label{
-    font-size: 0.81rem;
-    font-weight: 600;
-    color: #000000c0;
-  }
-
-  .register-button{
-    text-align: center;
-    padding: 3rem;
-  }
-
-  .register-button input{
-    width: 200px;
-    border: none;
-    background-color: #F57419;
-    padding: 0.62rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 0.93rem;
-    color: #fff;
-    margin-bottom: 10px;
-  }
-  
-  .register-button input:hover{
-    background-color: #ff6a00;
-  } 
-  
-
-  footer {
-    width: 100%;
-    color: var(--cor-bg);
-    position: relative;
-    bottom: 0;
-    
-  }
-
-  #footer_copyright {
-    display: flex;
-    justify-content: center;
-    background-color: var(--cor-secundaria);
-    font-size: 0.9rem;
-    padding: 1.5rem;
-    font-weight: 100;
-  }
-
-  @media screen and (max-width: 700px) {
-    .formLogin {
-      height: 40%;
-      width: 100%;
-    }
-  
-    .button a{
-      width: 100%;
-      text-decoration: none;
-      height: 20px;
-      background-color: #F57419;
-      padding: 0.90rem 4.4rem 0.90rem 4.4rem;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 0.93rem;
-      color: #fff;
-    }
-    .form{
-      padding-top: 50px;
-      width: 300px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .container{
-      margin-top: 20%;
-      background-color: #fff;
-      border-radius: 7px;
-      box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-      width: 620px;
-      height: 100%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  
-  }
-  
-  @media screen and (max-width: 494px) {
-    .titulo h1 {
-      font-size: 50px;
-    }
-  
-  }
-  
-  @media screen and (max-width: 412px) {
-    .formLogin {
-      padding-bottom: 130px;
-    }
-  
-    .titulo h1 {
-      font-size: 35px;
-    }
-  
-  }
+}
